bk_ida/gccida/c1/genrtl_case_label
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/genrtl_case_label/src/c-semantics.c:1137:7: error: use of undeclared identifier 'genrtl_case_label_explained'
if ( !genrtl_case_label_explained ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/genrtl_case_label/src/c-semantics.c:1140:1: error: use of undeclared identifier 'genrtl_case_label_explained'
genrtl_case_label_explained = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/genrtl_case_label/src/obj/c-semantics.o] Error 1
